rust/src/nasl/syntax/snapshots/scannerlib__nasl__syntax__keyword_extension__test__unclosed-4.snap
---
source: src/nasl/syntax/keyword_extension.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_err(stringify! (unclosed), \"if (description) { ; \")"
snapshot_kind: text
---
error: Unclosed token: '{'
  ┌─ unclosed:1:1
  │
1 │ if (description) { ; 
  │ ^ Unclosed token: '{'
